--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins',sans-serif;
+    scroll-behavior: smooth;
 }
 body{
     background:#052489;
@@ -23,6 +24,7 @@ body{
     background:linear-gradient(#081b29,#052489);
     
 }
+
 .logo1{
     font-size: 25px;
     color: wheat;
@@ -496,15 +498,141 @@ footer {
     box-sizing: border-box;
   } 
 
-@media(max-width:820px){
+
+
+  @media(max-width:820px){
     .navbar{
       
       display: flex;
       justify-content: left;
       text-align: left;
       font-size:15px;
-      padding-left: 180px;
-      padding-right: 600px;
-      flex-direction: column;
+      padding-left: 10px;
+    }
+    .navbar a{
+      font-size: 15px;
+    }
+
+    .home{
+      margin-top: 250px;
+      height: 10vh;
+      font-size: 13px;
+
+    }
+    .home .home-content h1{
+      font-size: 30px;
+    }
+    .home .home-content h3{
+      font-size: 20px;
+    }
+    .home .home-content p{
+      display: block;
+      margin-right: 10px;
+      margin-bottom: 20px;
+      padding-right: 150px;
+      
+    }
+    .home .btn-box{
+      width: 50vw;
+    }
+    .home .homepage{
+      width: 100px;
+      padding-right: 200px;
+    }
+
+    .aboutHeader{
+      padding:50px auto;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      margin-left: 15vh;
+      padding-top: 18vh;
+      font-size: 32px;
+      font-weight: 700;
+    }
+    .about .about-img{
+      display: flex;
+      margin-top: 50px;
+      width: 600px;
+      padding-top: 80px;
+      margin-left: 15vh;
+      margin-right: 1vh;
+      justify-content: center;
+      
+    }
+    .about .about-content h3{
+      display: flex;
+      margin-top: 10vh;
+      margin-left: 75vh;
+      margin-right: 60vh;
+      padding: 10px;
+      padding-top: 50px;
+    }
+    .about .about-content p{
+      margin-right: 1vh;
+      margin-left: 50vh;
+      margin-bottom: 20px;
+      padding-right: 400px;
+      padding-left: 90px;
+      font-size: 21px;
+    }
+    .about .about-content .btn-box.btns{
+      display: none;
+    }
+
+    .home .home-sci{
+      margin-left: 70vh;
+      width: 300px;
+      height: 100px;
+    }
+
+    .header_experience{
+      padding:50px auto;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      margin-left: 15vh;
+      font-size: 32px;
+      font-weight: 700; 
+    }
+    .myexperience .container{
+      margin-right: 0vh;
+      margin-left: 20vh;
+    }
+    .MyProjectsTitle{
+      padding:50px auto;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      margin-left: 15vh;
+      font-size: 32px;
+      font-weight: 700; 
+    }
+    .MyProjects{
+      margin-right: 0vh;
+      margin-left: 20vh;
+    }
+    .CertificationsTitle{
+      padding:50px auto;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      margin-left: 15vh;
+      font-size: 32px;
+      font-weight: 700; 
+    }
+    .Certifications .CertificationItem{
+      margin-right: 0vh;
+      margin-left: 20vh;
+    }
+    .footer{
+      
+    }
+    .footer .container{
+      margin: 0 auto;
+      box-sizing: border-box; 
+      margin-right: 0vh;
+      margin-left: 20vh;
     }
   }
+
