--- a/style.css
+++ b/style.css
@@ -500,7 +500,7 @@ footer {
 
 
 
-  @media(max-width:820px){
+  /*@media(max-width:820px){
     .navbar{
       
       display: flex;
@@ -634,5 +634,5 @@ footer {
       margin-right: 0vh;
       margin-left: 20vh;
     }
-  }
+  }*/
 
