--- a/style.css
+++ b/style.css
@@ -636,3 +636,13 @@ footer {
     }
   }*/
 
+@media(max-width:820px){
+    .about .about-img{
+      width: 400px;
+      padding-top: 80px;
+      margin-left: 15vh;
+      margin-right: 1vh;
+      justify-content: center;
+      
+    }
+
