--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body{
     background:#052489;
     color: wheat;
-    z-index: -1;
+    z-index: 1;
 }
 .header{
     position: fixed;
@@ -187,7 +187,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 2rem;
+    gap: 10px;
     background: #052489;
     padding-bottom: 6rem;
 }
@@ -213,8 +213,8 @@ span{
 
 .about-img{
     position: relative;
-    width: 20rem;
-    height: 20rem;
+    height: min-content;
+    width: auto;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -222,7 +222,8 @@ span{
 }
 
 .about-img img{
-    width: 90%;
+    width: 300px;
+    height: auto;
     border-radius: 50%;
     border: .2rem solid var(#f2ae72);
 }
@@ -236,7 +237,7 @@ span{
 
 .about-content p{
     size: 1.7rem;
-    margin: 1.5rem 0 3rem;
+    margin: 24px 0;
 }
 
 .btn-box.btns{
@@ -304,14 +305,16 @@ span{
     padding: 40px;
     justify-content: center;
     align-items: center;
-    margin-top: 150px;
+    margin-top:40px;
+
   }
   
   .MyProjects {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 15rem;
+    margin:25px 0px;
+
   }
   
   .MyProjects a {
@@ -370,16 +373,7 @@ span{
     padding: 40px;
     justify-content: center;
     align-items: center;
-  }
-
-  .CertificationsTitle {
-    font-size: 32px;
-    font-weight: 700;
-    line-height: 1.2;
-    display: flex;
-    padding: 40px;
-    justify-content: center;
-    align-items: center;
+    margin-top: 50px;
   }
   
   .Certifications {
@@ -387,7 +381,7 @@ span{
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 1rem;
     justify-items: center;
-    margin-bottom: 15rem;
+    margin-bottom: 15px;
   }
   
   .CertificationItem {
@@ -499,140 +493,159 @@ footer {
   } 
 
 
+@media(max-width:1100px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 15px;
+  }
+  .home-content h1{
+    font-size: 35px;
+  }
+  .home-content h3{
+    font-size: 25px;
+  }
+  .homepage img{
+    margin-left:35px;
+    margin-right: 30px;
+  }
 
-  /*@media(max-width:820px){
-    .navbar{
-      
-      display: flex;
-      justify-content: left;
-      text-align: left;
-      font-size:15px;
-      padding-left: 10px;
+  .aboutHeader h2{
+    font-size: 35px;
+  }
+  .about-img img{
+     height: auto;
+     width: 250px;
+  }
+  .about-content p{
+    margin: 18px;
+    text-align: center;
+  }
+  
+  .header_experience h2{
+    font-size: 35px;
+  }
+  .MyProjectsTitle h2{
+    font-size: 35px;
+  }
+  .project-icon lord-icon{
+    height: 200px;
+    width: 200px;
+    margin: 0 10px;
+  }
+  .Project1, .Project2{
+    height: 400px;
+    width: min-content;
+    padding: 0;
+  }
+  .Project1 h3, .Project2 h3{
+    font-size: 15px;
+    margin: 0;
+  }
+  .CertificationsTitle h2{
+    font-size: 35px;
+  }
+  .MyProjects{
+    margin:25px 0px;
     }
-    .navbar a{
-      font-size: 15px;
-    }
+}
+@media(max-width:1098px){
+  .home-content h1{
+    font-size: 32px;
+  }
+}
 
-    .home{
-      margin-top: 250px;
-      height: 10vh;
-      font-size: 13px;
+@media(max-width:820px){
+  .homepage img{
+    display: none;
+  }
+}
+@media(max-width:780px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 14px;
+  }
+  .logoname a{
+    font-size: 14px;
+  }
+}
+@media(max-width:738px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 13px;
+  }
+  .logoname a{
+    font-size: 13px;
+  }
 
-    }
-    .home .home-content h1{
-      font-size: 30px;
-    }
-    .home .home-content h3{
-      font-size: 20px;
-    }
-    .home .home-content p{
-      display: block;
-      margin-right: 10px;
-      margin-bottom: 20px;
-      padding-right: 150px;
-      
-    }
-    .home .btn-box{
-      width: 50vw;
-    }
-    .home .homepage{
-      width: 100px;
-      padding-right: 200px;
-    }
+}
+@media(max-width:713px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 12px;
+  }
+  .logoname a{
+    font-size: 12px;
+  }
+}
 
-    .aboutHeader{
-      padding:50px auto;
-      display: flex;
-      justify-content: center;
-      text-align: center;
-      margin-left: 15vh;
-      padding-top: 18vh;
-      font-size: 32px;
-      font-weight: 700;
-    }
-    .about .about-img{
-      display: flex;
-      margin-top: 50px;
-      width: 450px;
-      padding-top: 80px;
-      margin-left: 15vh;
-      margin-right: 1vh;
-      justify-content: center;
-      
-    }
-    .about .about-content h3{
-      display: flex;
-      margin-top: 10vh;
-      margin-left: 75vh;
-      margin-right: 60vh;
-      padding: 10px;
-      padding-top: 50px;
-    }
-    .about .about-content p{
-      margin-right: 1vh;
-      margin-left: 50vh;
-      margin-bottom: 20px;
-      padding-right: 400px;
-      padding-left: 90px;
-      font-size: 21px;
-    }
-    .about .about-content .btn-box.btns{
-      display: none;
-    }
-
-    .home .home-sci{
-      margin-left: 70vh;
-      width: 300px;
-      height: 100px;
-    }
-
-    .header_experience{
-      padding:50px auto;
-      display: flex;
-      justify-content: center;
-      text-align: center;
-      margin-left: 15vh;
-      font-size: 32px;
-      font-weight: 700; 
-    }
-    .myexperience .container{
-      margin-right: 0vh;
-      margin-left: 20vh;
-    }
-    .MyProjectsTitle{
-      padding:50px auto;
-      display: flex;
-      justify-content: center;
-      text-align: center;
-      margin-left: 15vh;
-      font-size: 32px;
-      font-weight: 700; 
-    }
-    .MyProjects{
-      margin-right: 0vh;
-      margin-left: 20vh;
-    }
-    .CertificationsTitle{
-      padding:50px auto;
-      display: flex;
-      justify-content: center;
-      text-align: center;
-      margin-left: 15vh;
-      font-size: 32px;
-      font-weight: 700; 
-    }
-    .Certifications .CertificationItem{
-      margin-right: 0vh;
-      margin-left: 20vh;
-    }
-    .footer{
-      display: flex;
-    }
-    .footer .container{
-      margin: 0 auto;
-      box-sizing: border-box; 
-      margin-right: 0vh;
-      margin-left: 20vh;
-    }
-  }*/
-
+@media(max-width:650px){
+  .MyProjects{
+    flex-direction: column;
+    gap:15px;
+  }
+  .logo img{
+    width: 200px;
+    height: auto;
+  }
+  .experience h2{
+    font-size: 22px;
+  }
+}
+@media(max-width:627px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 11px;
+  }
+  .logoname a{
+    font-size: 11px;
+  }
+}
+@media(max-width:589px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 10px;
+  }
+  .logoname a{
+    font-size: 10px;
+  }
+}
+@media(max-width:553px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 9px;
+  }
+  .logoname a{
+    font-size: 9px;
+  }
+  .experience h2{
+    font-size: 17px;
+  }
+  .experience p{
+    font-size: 10px;
+  }
+}
+@media(max-width:515px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 8px;
+  }
+  .logoname a{
+    font-size: 9px;
+  }
+  .experience h2{
+    font-size: 15px;
+  }
+  .experience p{
+    font-size: 10px;
+  }
+}
