--- a/style.css
+++ b/style.css
@@ -627,6 +627,10 @@ footer {
   .logoname a{
     font-size: 9px;
   }
+  .logo img{
+    width: 180px;
+    height: auto;
+  }
   .experience h2{
     font-size: 17px;
   }
@@ -641,6 +645,724 @@ footer {
   }
   .logoname a{
     font-size: 9px;
+  }
+  .logo img{
+    width: 160px;
+    height: auto;
+  }
+  .experience h2{
+    font-size: 15px;
+  }
+  .experience p{
+    font-size: 10px;
+  }
+}
+
+@media(max-width:482px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 6px;
+  }
+  .logoname a{
+    font-size: 8px;
+  }
+  .logo img{
+    width: 135px;
+    height: auto;
+  }
+  .experience h2{
+    font-size: 15px;
+  }
+  .experience p{
+    font-size: 10px;
+  }
+}
+@media(max-width:411px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 5px;
+  }
+  .logoname a{
+    font-size: 8px;
+  }
+  .logo img{
+    width: 125px;
+    height: auto;
+  }
+  .experience h2{
+    font-size: 15px;
+  }
+  .experience p{
+    font-size: 10px;
+  }
+}
+    background:linear-gradient(#081b29,#052489);
+    
+}
+
+.logo1{
+    font-size: 25px;
+    color: wheat;
+    text-decoration: none;
+    font-weight: 600;
+}
+.navbar{
+    z-index:1;
+}
+.navbar a{
+    font-size: 18px;
+    color:wheat;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 35px;
+    transition: all .3s ease;
+}
+.navbar a:hover,
+.navbar a.active{
+    color: #f2ae72;
+}
+
+.home{
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    padding: 0 10%;
+    z-index: -1;
+}
+.home-content{
+    max-width: 600px;
+}
+.home-content h1{
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 1.2;
+}
+.home-content h3{
+    font-size: 32px;
+    font-weight: 700px;
+    color: #f2ae72;
+}
+.home-content p{
+    font-size: 16px;
+    margin: 20px 0 40px;
+}
+.home-content .btn-box{
+    display: flex;
+    justify-content: space-between;
+    width:345px;
+    height: 50px;
+}
+.btn-box a{
+    position: relative;
+    padding: auto;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 100%;
+    background: #f2ae72;
+    border: 2px solid #f2ae72;
+    border-radius: 8px;
+    font-size: 19px;
+    color:#081b29;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+    z-index: 0;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.btn-box a:hover{
+    color: #f2ae72;
+}
+
+.btn-box a:nth-child(2){
+    background: transparent;
+    color: #f2ae72;
+}
+.btn-box a:nth-child(2):hover{
+    color: #081b29;
+}
+.btn-box a:nth-child(2)::before{
+    background: #f2ae72;
+}
+
+
+.btn-box a::before{
+    content: '';
+    position: absolute;
+    top:0;
+    left:0;
+    width: 0;
+    height: 100%;
+    background: #052489;
+    z-index: -1;
+    transition: .5s;
+}
+.btn-box a:hover::before{
+    width: 100%;
+}
+.homepage img{
+    display: flex;
+    border-radius: 300px;
+    margin-left:45px;
+    margin-bottom: 45px;
+    box-shadow: #081b29;
+}
+
+.home-sci{
+    position: absolute;
+    bottom: 40px;
+    width: 170px;
+    display: flex;
+    justify-content: space-between;
+}
+.home-sci a{
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid white;
+    border-radius: 50%;
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+    z-index:0;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.home-sci a:hover{
+    color:#081b29;
+}
+
+
+.home-sci a::before{
+    content: '';
+    position: absolute;
+    top:0;
+    left:0;
+    width: 0;
+    height: 100%;
+    background: #f2ae72;
+    z-index:-1;
+    transition: .5s;
+}
+.home-sci a:hover::before{
+    width: 100%;
+}
+
+
+.about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    background: #052489;
+    padding-bottom: 6rem;
+}
+.aboutHeader{
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 1.2;
+    display: flex;
+    padding: 40px;
+    justify-content: center;
+    align-items: center;
+}
+
+.heading{
+    font-size: 4rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+span{
+    color: #f2ae72;
+}
+
+.about-img{
+    position: relative;
+    height: min-content;
+    width: auto;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-img img{
+    width: 300px;
+    height: auto;
+    border-radius: 50%;
+    border: .2rem solid var(#f2ae72);
+}
+
+.about-content{
+    text-align: center;
+}
+.about-content h3{
+    size:2.7rem;
+}
+
+.about-content p{
+    size: 1.7rem;
+    margin: 24px 0;
+}
+
+.btn-box.btns{
+    display: inline-block;
+    width: 15rem;
+}
+
+.header_experience{
+    font-size: 32px;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.2;
+    padding: 0 20px;
+    padding-bottom: 40px;
+}
+
+.myexperience .container{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    margin: 0 auto;
+    max-width: 900px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.1); /* Add this line */
+    transition: box-shadow 0.3s ease-in-out;
+  }
+
+  .container:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add this line */
+}
+
+
+  
+  .logo {
+    margin-right: 20px;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .logo:hover {
+    transform: scale(1.1);
+  }
+  
+  .logo img {
+    max-width: 100%;
+  }
+  
+  .experience {
+    flex: 1;
+  }
+  h2 {
+    margin-top: 0;
+  }
+  
+  p {
+    margin-bottom: 0;
+  }
+
+
+  .MyProjectsTitle {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 1.2;
+    display: flex;
+    padding: 40px;
+    justify-content: center;
+    align-items: center;
+    margin-top:40px;
+
+  }
+  
+  .MyProjects {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin:25px 0px;
+
+  }
+  
+  .MyProjects a {
+    cursor: pointer;
+  }
+  
+  .Project1,
+  .Project2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 1rem;
+    padding: 1.5rem;
+    background-color: rgb(207, 203, 203);
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    flex: 1;
+    transition: all 0.3s ease;
+  }
+
+  .Project1:hover,
+  .Project2:hover{
+    transform: scale(1.02);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  }
+  
+  .project-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 300px;
+  }
+  
+  .project-icon lord-icon {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .Project1 h3,
+  .Project2 h3 {
+    margin-top: 20px;
+    font-size: 24px;
+    font-weight: 600;
+    text-align: center;
+    color: #333;
+  }
+
+
+  .CertificationsTitle{
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 1.2;
+    display: flex;
+    padding: 40px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+  }
+  
+  .Certifications {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 1rem;
+    justify-items: center;
+    margin-bottom: 15px;
+  }
+  
+  .CertificationItem {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+  }
+  
+  .CertificationItem:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  }
+  
+  .CertificationItem img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    transition: all 0.3s ease;
+  }
+  
+  .CertificationItem:hover img {
+    transform: translate(-50%, -50%) scale(1.2);
+  }
+  
+  .CertificationItem h3 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 0.5rem;
+    margin: 0;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.8);
+    opacity: 0;
+    transition: all 0.3s ease;
+  }
+  
+  .CertificationItem:hover h3 {
+    opacity: 1;
+  }
+  
+  .CertificationItem a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+
+
+
+
+  /* Footer  */
+footer {
+    background:linear-gradient(#052489,#081b29) ;
+    color: #fff;
+    padding: 30px;
+    padding-right: 50px;
+  }
+  
+  /* Social media icons styling */
+  .social-icons {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .social-icons li {
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 20px;
+    transition: transform 0.3s ease;
+  }
+  
+  .social-icons li:hover {
+    transform: scale(1.2);
+  }
+  
+  .social-icons li a {
+    color: #fff;
+  }
+  
+  /* Copyright text styling */
+  footer p {
+    margin: 0;
+    font-size: 14px;
+  }
+  
+  /* Container styling */
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 0 15px;
+    box-sizing: border-box;
+  } 
+
+
+@media(max-width:1100px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 15px;
+  }
+  .home-content h1{
+    font-size: 35px;
+  }
+  .home-content h3{
+    font-size: 25px;
+  }
+  .homepage img{
+    margin-left:35px;
+    margin-right: 30px;
+  }
+
+  .aboutHeader h2{
+    font-size: 35px;
+  }
+  .about-img img{
+     height: auto;
+     width: 250px;
+  }
+  .about-content p{
+    margin: 18px;
+    text-align: center;
+  }
+  
+  .header_experience h2{
+    font-size: 35px;
+  }
+  .MyProjectsTitle h2{
+    font-size: 35px;
+  }
+  .project-icon lord-icon{
+    height: 200px;
+    width: 200px;
+    margin: 0 10px;
+  }
+  .Project1, .Project2{
+    height: 400px;
+    width: min-content;
+    padding: 0;
+  }
+  .Project1 h3, .Project2 h3{
+    font-size: 15px;
+    margin: 0;
+  }
+  .CertificationsTitle h2{
+    font-size: 35px;
+  }
+  .MyProjects{
+    margin:25px 0px;
+    }
+}
+@media(max-width:1098px){
+  .home-content h1{
+    font-size: 32px;
+  }
+}
+
+@media(max-width:820px){
+  .homepage img{
+    display: none;
+  }
+}
+@media(max-width:780px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 14px;
+  }
+  .logoname a{
+    font-size: 14px;
+  }
+}
+@media(max-width:738px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 13px;
+  }
+  .logoname a{
+    font-size: 13px;
+  }
+
+}
+@media(max-width:713px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 12px;
+  }
+  .logoname a{
+    font-size: 12px;
+  }
+}
+
+@media(max-width:650px){
+  .MyProjects{
+    flex-direction: column;
+    gap:15px;
+  }
+  .logo img{
+    width: 200px;
+    height: auto;
+  }
+  .experience h2{
+    font-size: 22px;
+  }
+}
+@media(max-width:627px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 11px;
+  }
+  .logoname a{
+    font-size: 11px;
+  }
+}
+@media(max-width:589px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 10px;
+  }
+  .logoname a{
+    font-size: 10px;
+  }
+}
+@media(max-width:553px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 9px;
+  }
+  .logoname a{
+    font-size: 9px;
+  }
+  .logo img{
+    width: 180px;
+    height: auto;
+  }
+  .experience h2{
+    font-size: 17px;
+  }
+  .experience p{
+    font-size: 10px;
+  }
+}
+@media(max-width:515px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 8px;
+  }
+  .logoname a{
+    font-size: 9px;
+  }
+  .logo img{
+    width: 160px;
+    height: auto;
+  }
+  .experience h2{
+    font-size: 15px;
+  }
+  .experience p{
+    font-size: 10px;
+  }
+}
+
+@media(max-width:482px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 6px;
+  }
+  .logoname a{
+    font-size: 8px;
+  }
+  .logo img{
+    width: 135px;
+    height: auto;
+  }
+  .experience h2{
+    font-size: 15px;
+  }
+  .experience p{
+    font-size: 10px;
+  }
+}
+@media(max-width:411px){
+  .navbar a{
+    margin-left: 20px;
+    font-size: 5px;
+  }
+  .logoname a{
+    font-size: 8px;
+  }
+  .logo img{
+    width: 125px;
+    height: auto;
   }
   .experience h2{
     font-size: 15px;
