--- a/style.css
+++ b/style.css
@@ -802,5 +802,17 @@ footer {
   .home-sci{
     display: none;
   }
+    .Project1, .Project2, .Project3{
+    height: 400px;
+    width: min-content;
+    padding: 0;
+  }
+  .Project1 h3, .Project2 h3{
+    font-size: 15px;
+    margin: 0;
+  }
+  .Project3 h3{
+    margin-bottom: 30px;
+  }
 }
 
